qtz-product-specs/src/style.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	font-family: "Cormorant Garamond", serif;
}

:root {
	--orange: #F16224;
	--green: #055D34;
	--dark: #040404;
	--white: white;
}

body {
	font-family: Arial, sans-serif;
	display: flex;
	justify-content: center;
	padding: 20px;
}

h2 {
	font-size: 24px;
	font-weight: bold;
	color: var(--dark);
	margin-bottom: 10px;
}

.flyer-container {
	width: 210mm;
	height: auto;
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
	background-color: var(--orange);
	display: flex;
	flex-direction: column;
	position: relative;
	/* Removed padding here to prevent it from affecting the footer */
}

.flyer-heading, .flyer-date, .flyer-description {
	text-align: center;
	margin-top: 10px;
}

.flyer-description {
	font-size: 25px;
	font-weight: 700;
	padding: 15px;
}

.offerings-section {
	background-image: url(assets/images/banner.png);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	min-height: 14rem;
}

header,
footer {
	background-color: var(--white);
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
	display: flex;
	justify-content: space-between;
	align-items: center;
}

header {
	margin-top: auto;
	background-image: url(assets/images/header.png);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	min-height: 12.5rem;
}

footer {
	margin-top: auto;
	background-image: url(assets/images/new-footer.png);
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	min-height: 30rem;
}

.container {
	display: flex;
	justify-content: space-between;
}

.images {
	display: flex;
	flex-direction: row;
	justify-content: center;
	list-style: none;
	margin: 10px 0;
}

.product-heading {
	font-size: larger;
	font-weight: 800;
	text-align: center;
	margin-bottom: 5px;
}

.product-image {
	min-width: 22rem;
	min-height: 10rem;
	object-fit: cover;
	margin: 0 10px;
	border: 1px solid #aaa;
	border-radius: 5px;
}

.input-section {
	background-color: #f9f9f9;
	padding: 20px;
	border-radius: 8px;
	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.input-section h2 {
	margin-bottom: 15px;
}

.input-section label {
	display: block;
	margin: 10px 0 5px;
	font-weight: bold;
}

.input-section input,
.input-section textarea {
	width: 100%;
	padding: 10px;
	margin-bottom: 15px;
	border: 1px solid #ccc;
	border-radius: 4px;
	font-size: larger;
	color: var(--dark);
	font-weight: 800;
}

.input-section button {
	background-color: #007bff;
	color: #fff;
	border: none;
	padding: 10px 15px;
	border-radius: 4px;
	cursor: pointer;
	font-size: larger;
	margin: 10px;
}

.input-section button:hover {
	background-color: #0056b3;
}

.display {
	font-size: larger;
	font-weight: bolder;
}

